<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libllt</name>
  <version>1.0.1</version>

  
  <description>TODO: Package description</description>
  <maintainer email="kieffer@igmr.rwth-aachen.de">ros</maintainer>
  <license>LGPL</license>

  <depend>aravis-dev</depend>
  <depend>libglib-dev</depend>
  <depend>libmescan</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>